XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ????

- Implement more stream wrapper functions in XpXarLoader, providing a
  more complete stream wrapper support (file_exists now works)
  (kiesel)
- Fix addRecipient() method in peer.mail.Message
  (kiesel)
- Make xml.DomXSLProcessor::setBase() work again
  (kiesel)
- Show class' apidoc comment in xpcli --help|-?
  (friebe)
- Added lang.XPClass::getComment()
  (friebe)
- Added lang.reflect.Field::getModifiers()
  (friebe)
- Added lang.reflect.Modifiers utility class
  (friebe)
- Made CLI sapi print uncaught exceptions to STDERR
  (friebe)
- Made Doclet API parse XP5 syntax
  (friebe)
- Exclude replication tables from SybaseDBAdapter::getTables()
  (friebe)
- Implemented RFC #0104: Add XSLCallback class and provide support 
  for calling PHP functions from within XSL
  (kiesel)

Version 5.1.0, released 2006-12-28
----------------------------------
SVN version: 9007

- Implemented RFC #0103: Coding standards adjustements for XP5
  (friebe)
- Implemented RFC #0102: XP Class Runner
  (friebe)
- Implemented RFC #0088: Streams API
  (friebe)
- Updated SQLite class to use StatementFormatter
  (kiesel)
- Added webservices.soap.types.SOAPDouble class
  (strobel)
- Fixed util.Properties to return an empty array from readArray()
  for an empty string such as values=""
  (friebe)
- Fixed Java Webstart example to work with URLs containing query string
  arguments
  (friebe)

Version 5.0.0, released 2006-12-21
----------------------------------
SVN version: 8943

- fix reflection for classes from .xars
  (kiesel)
- implemented RFC #0092 (migrated to PHP5)
  (all)
  
Version 4.1.3, released 2006-12-18
----------------------------------
SVN version: 8875

- Fix (De-)Serializer bug in remote package
  (kiesel)
- Add SQLConnectionClosedException in rdbms package for mysql
  (gelli)